--- a/dotCMS/src/main/webapp/WEB-INF/web.xml
+++ b/dotCMS/src/main/webapp/WEB-INF/web.xml
@@ -192,6 +192,9 @@
     
 	<!-- DOTMARKETING LISTENERS -->
 	<listener>
+		<listener-class>org.jboss.weld.environment.servlet.Listener</listener-class>
+	</listener>
+	<listener>
 		<listener-class>com.dotmarketing.listeners.ContextLifecycleListener</listener-class>
 	</listener>
 	<listener>
@@ -267,7 +270,7 @@
         <servlet-name>login_edit_mode</servlet-name>
         <servlet-class>com.dotmarketing.servlets.LoginEditModeServlet</servlet-class>
     </servlet>
-	
+
 	<servlet>
 	  <servlet-name>dwr-invoker</servlet-name>
 	  <servlet-class>com.dotmarketing.servlets.DwrWrapperServlet</servlet-class>
@@ -609,5 +612,11 @@
 	<!-- Don't ever delete the following comment tags, it will break the plugin system -->
 	<!-- BEGIN SECURITY-CONSTRAINTS -->
     <!-- END SECURITY-CONSTRAINTS -->
-    
+	<resource-env-ref>
+		<resource-env-ref-name>BeanManager</resource-env-ref-name>
+		<resource-env-ref-type>
+			javax.enterprise.inject.spi.BeanManager
+		</resource-env-ref-type>
+	</resource-env-ref>
+
 </web-app>
