--- a/dotCMS/pom.xml
+++ b/dotCMS/pom.xml
@@ -1402,6 +1402,25 @@
             </exclusions>
         </dependency>
 
+        <!-- Weld CDI -->
+
+        <dependency>
+            <groupId>org.jboss.weld.servlet</groupId>
+            <artifactId>weld-servlet-shaded</artifactId>
+            <version>3.1.9.Final</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.jboss.weld.se</groupId>
+            <artifactId>weld-se-shaded</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>io.smallrye</groupId>
+            <artifactId>jandex</artifactId>
+            <version>3.0.5</version>
+        </dependency>
 
     </dependencies>
     <dependencyManagement>
