feat(sdk-experiments): workaround flikering

--- a/.gitignore
+++ b/.gitignore
@@ -161,3 +161,4 @@ dotCMS/src/main/webapp/dotcms-block-editor
 dotCMS/src/main/webapp/WEB-INF/classes
 # allow build to cache files that are not removed on clean e.g. spotless index
 .cache
+!/examples/nextjs/.npmrc
