--- a/core-web/libs/sdk/react/project.json
+++ b/core-web/libs/sdk/react/project.json
@@ -46,6 +46,11 @@
                     "codeCoverage": true
                 }
             }
+        },
+        "nx-release-publish": {
+            "options": {
+                "packageRoot": "dist/libs/sdk/react"
+            }
         }
     }
 }
