#27959-search: adding Embeddings data generation convenience class and SearchToolTest as an integration test

--- a/environments/environment.properties
+++ b/environments/environment.properties
@@ -1,5 +1,5 @@
 mvn.environment.name=${env.BUILD_ENV:dev}
 default.context.name=default
 docker.image.search=opensearchproject/opensearch:1.3.6
-docker.image.postgres=postgres:15
+docker.image.postgres=ankane/pgvector
 postman.collections=Maintenance_Resource
