issue-28171-Adding changes to make the workflow action selection mandate while importing contentlets (#28330)
* issue-28171-Adding changes to make the workflow action selection mandate while importing contentlets

* issue-28171-Fixing Sonar cube issues

---------

Co-authored-by: erickgonzalez <erick.gonzalez@dotcms.com>

--- a/dotCMS/src/main/webapp/WEB-INF/messages/Language.properties
+++ b/dotCMS/src/main/webapp/WEB-INF/messages/Language.properties
@@ -4876,6 +4876,7 @@ Will-be-Published=Will be published
 Work-Address=Work Address
 work-stream=Work Stream
 Work=Work
+Workflow-action-type-required=Workflow action type is required
 Workflow-action-already-exists=The Workflow Action could not be saved, because it already exists
 Workflow-action-execution-error=Unable to execute the Workflow Action. Error:
 workflow-action-id-field-found-in-import-contentlet-csv-file=Workflow Action ID field found.
