--- a/dotCMS/src/main/webapp/WEB-INF/messages/Language.properties
+++ b/dotCMS/src/main/webapp/WEB-INF/messages/Language.properties
@@ -5678,6 +5678,10 @@ editpage.language-change-missing-lang-populate.confirm.header=Create New Languag
 editpage.language-change-missing-lang-populate.confirm.message=Page does not exist in the selected language. Create a new version in {0}?
 editpage.viewing.variant=Viewing <b>{0}</b> Variant
 editpage.editing.variant=Editing <b>{0}</b> Variant
+editpage.file.upload.not.image=The file dropped was not an image.
+editpage.file.upload.error=An error ocurred while uploading the image.
+editpage.file.uploading=Uploading {0}
+editpage.file.publishing=Publishing {0}
 
 editpage.locked-by=<b>Locked </b> by {0}
 editpage.locked-contact-with=<b>Locked.</b>. Contact with {0} user
