--- a/.github/workflows/reusable-deployment.yml
+++ b/.github/workflows/reusable-deployment.yml
@@ -83,17 +83,14 @@ jobs:
           build_args: |
             DOTCMS_DOCKER_TAG=${{ inputs.environment }}
 
-      # The CLI artifacts are built and uploaded to Artifactory using the 'deploy-artifact-cli' action.
+      # The artifacts are uploaded to Artifactory using the 'deploy-artifact-artifactory' action.
       - name: CLI Deploy
         id: cli_deploy
-        uses: ./.github/actions/deploy-artifact-cli
+        uses: ./.github/actions/deploy-artifact-artifactory
         with:
-          branch: master
           artifactory-repo-username: ${{ secrets.EE_REPO_USERNAME }}
           artifactory-repo-password: ${{ secrets.EE_REPO_PASSWORD }}
           github-token: ${{ secrets.GITHUB_TOKEN }}
-          build-run-id: ${{ github.run_id }} # We are currently building these artifacts in the current run
-          commit-id: ${{ github.sha }}
 
       - name: CLI Publish
         if: inputs.publish-npm-package
