feat: add empty contentlet styles and message

--- a/dotCMS/src/main/webapp/WEB-INF/messages/Language.properties
+++ b/dotCMS/src/main/webapp/WEB-INF/messages/Language.properties
@@ -5016,6 +5016,7 @@ editpage.header.copy=Copy URL
 editpage.preview=Show Preview
 editpage.header.back.to.experiment=Back to experiment
 editpage.container.is.empty=This container is empty
+editpage.contentlet.is.empty=There is no contentType code. Consider adding a contentType variable to the container
 editpage.content.update.contentlet.error=Error saving content
 errors.user.front-end-role.missing=User does not have the Front-end User Role.
 image.editor.heading.file.settings=File Settings
