--- a/.github/actions/publish-npm-cli/action.yml
+++ b/.github/actions/publish-npm-cli/action.yml
@@ -186,13 +186,16 @@ runs:
           fi
 
           echo "VERSION_NPM_FORMAT: ${VERSION_NPM_FORMAT}"
-          LAST_RC_VERSIONS=$(npm view $PACKAGE_FULL_NAME versions --json)
-          echo "LAST_RC_VERSIONS: ${LAST_RC_VERSIONS}"
+          # Get last RC versions
+          LATEST_RC_VERSIONS=$(npm view $PACKAGE_FULL_NAME versions --json)
+          echo "LATEST_RC_VERSIONS: ${LATEST_RC_VERSIONS}"
 
-          LAST_RC_VERSION=$(npm view $PACKAGE_FULL_NAME versions --json | jq --arg filter $VERSION_NPM_FORMAT 'map(.| select(. | contains($filter)))' | jq -r 'map(select(test("-rc\\d+$"))) | max')
-
-          if [[ $LAST_RC_VERSION == "$VERSION_NPM_FORMAT"* ]]; then
-            NEXT_RC_VERSION=$(echo "$LAST_RC_VERSION" | awk -F '-rc' '{print $1 "-rc" $2 + 1}')
+          # Extract max RC version
+          MAX_RC_VERSION=$(echo $LATEST_RC_VERSIONS | jq -r --arg filter $VERSION_NPM_FORMAT-rc 'map(.| select(. | contains($filter)) | sub($filter; "") | tonumber ) | $filter+"\(max)"')
+          echo "MAX_RC_VERSION: ${MAX_RC_VERSION}"
+      
+          if [[ $MAX_RC_VERSION == "$VERSION_NPM_FORMAT"* ]]; then
+            NEXT_RC_VERSION=$(echo "$MAX_RC_VERSION" | awk -F '-rc' '{print $1 "-rc" $2 + 1}')
             RC_SUFFIX=$(echo "$NEXT_RC_VERSION" | sed -n 's/.*-rc\([0-9]*\)/-rc\1/p')
           else
             RC_SUFFIX="-rc1"
