--- a/dotCMS/src/main/resources/dotmarketing-config.properties
+++ b/dotCMS/src/main/resources/dotmarketing-config.properties
@@ -416,6 +416,11 @@ cache.graphqlquerycache.chain=com.dotmarketing.business.cache.provider.caffine.C
 cache.graphqlquerycache.seconds=15
 cache.graphqlquerycache.size=5000
 
+## Cache doesUserHavePermission calls for 60 seconds
+cache.permissionshortlived.chain=com.dotmarketing.business.cache.provider.timedcache.TimedCacheProvider
+cache.permissionshortlived.seconds=60
+cache.permissionshortlived.size=100000
+
 ## The cache transport wires a dotcms cluster together.  If you are running Postgresql, dotCMS will automatically use the PubSubCacheTransport
 ## as the default CacheTransport. If you are NOT running Postgresql, dotCMS will fall back.
 ## You can override the cache transport by changing the config variable CACHE_INVALIDATION_TRANSPORT_CLASS
