--- a/.gitignore
+++ b/.gitignore
@@ -146,6 +146,7 @@ pom.xml.tag
 pom.xml.releaseBackup
 pom.xml.versionsBackup
 release.properties
+.flattened-pom.xml
 
 /dependencies.txt
 /updates.txt
