--- a/bom/application/pom.xml
+++ b/bom/application/pom.xml
@@ -5,13 +5,15 @@
     <parent>
         <artifactId>dotcms-bom</artifactId>
         <groupId>com.dotcms</groupId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>${revision}${sha1}${changelist}</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <packaging>pom</packaging>
     <artifactId>dotcms-application-bom</artifactId>
 
     <properties>
+        <maven.deploy.skip>false</maven.deploy.skip>
+        <flatten.mode>bom</flatten.mode>
         <aws-java-sdk.version>1.12.488</aws-java-sdk.version>
         <twelvemonkeys.version>3.10.1</twelvemonkeys.version>
         <swagger.version>2.2.0</swagger.version>
