--- a/bom/logging/pom.xml
+++ b/bom/logging/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>dotcms-bom</artifactId>
         <groupId>com.dotcms</groupId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>${revision}${sha1}${changelist}</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -13,6 +13,8 @@
     <packaging>pom</packaging>
 
     <properties>
+        <maven.deploy.skip>false</maven.deploy.skip>
+        <flatten.mode>bom</flatten.mode>
         <log4j.version>2.20.0</log4j.version>
         <slf4j.version>2.0.7</slf4j.version>
     </properties>
