--- a/build-parent/pom.xml
+++ b/build-parent/pom.xml
@@ -11,7 +11,7 @@
     <parent>
         <groupId>com.dotcms</groupId>
         <artifactId>dotcms-parent</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>${revision}${sha1}${changelist}</version>
         <relativePath>../parent/pom.xml</relativePath>
     </parent>
 
@@ -52,7 +52,7 @@
             <dependency>
                 <groupId>com.dotcms</groupId>
                 <artifactId>dotcms-application-bom</artifactId>
-                <version>1.0.0-SNAPSHOT</version>
+                <version>${project.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
