--- a/core-web/pom.xml
+++ b/core-web/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.dotcms</groupId>
         <artifactId>dotcms-nodejs-parent</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>${revision}${sha1}${changelist}</version>
         <relativePath>../nodejs-parent/pom.xml</relativePath>
     </parent>
 
@@ -13,6 +13,7 @@
     <packaging>war</packaging>
 
     <properties>
+        <maven.deploy.skip>false</maven.deploy.skip>
         <java.version>11</java.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
@@ -50,12 +51,6 @@
                             <directory>dist</directory>
                             <includes>
                                 <include>**/*</include>
-                            </includes>
-                        </fileset>
-                        <fileset>
-                            <directory>.nx/cache</directory>
-                            <includes>
-                                <include>*/**</include>
                             </includes>
                         </fileset>
                     </filesets>
