--- a/dotcms-integration/pom.xml
+++ b/dotcms-integration/pom.xml
@@ -4,13 +4,11 @@
     <parent>
         <groupId>com.dotcms</groupId>
         <artifactId>dotcms-build-parent</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>${revision}${sha1}${changelist}</version>
         <relativePath>../build-parent/pom.xml</relativePath>
     </parent>
     <packaging>jar</packaging>
     <artifactId>dotcms-integration</artifactId>
-
-    <version>1.0.0-SNAPSHOT</version>
     <properties>
         <license.use>true</license.use>
         <servlet.port>8080</servlet.port>
