--- a/independent-projects/core-plugins/pom.xml
+++ b/independent-projects/core-plugins/pom.xml
@@ -4,8 +4,7 @@
     <parent>
         <groupId>com.dotcms</groupId>
         <artifactId>dotcms-independent-projects</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
-
+        <version>${revision}${sha1}${changelist}</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
@@ -16,6 +15,7 @@
     <artifactId>dotcms-core-plugins-parent</artifactId>
 
     <properties>
+        <maven.deploy.skip>false</maven.deploy.skip>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
