--- a/independent-projects/core-plugins/tika-api/pom.xml
+++ b/independent-projects/core-plugins/tika-api/pom.xml
@@ -6,13 +6,13 @@
     <parent>
         <groupId>com.dotcms.core.plugins</groupId>
         <artifactId>dotcms-core-plugins-parent</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>${revision}${sha1}${changelist}</version>
     </parent>
 
     <artifactId>com.dotcms.tika-api</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
 
     <properties>
+        <maven.deploy.skip>false</maven.deploy.skip>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
