--- a/nodejs-parent/pom.xml
+++ b/nodejs-parent/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>com.dotcms</groupId>
         <artifactId>dotcms-parent</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>${revision}${sha1}${changelist}</version>
         <relativePath>../parent/pom.xml</relativePath>
     </parent>
     <artifactId>dotcms-nodejs-parent</artifactId>
