--- a/osgi-base/system-bundles/pom.xml
+++ b/osgi-base/system-bundles/pom.xml
@@ -5,13 +5,14 @@
     <parent>
         <artifactId>dotcms-osgi-base</artifactId>
         <groupId>com.dotcms.plugins</groupId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>${revision}${sha1}${changelist}</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <packaging>pom</packaging>
     <artifactId>dotcms-system-bundles</artifactId>
 
     <properties>
+        <maven.deploy.skip>false</maven.deploy.skip>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
         <tika.version>1.28.5</tika.version>
@@ -174,7 +175,7 @@
                 <dependency>
                     <groupId>com.dotcms.core.plugins</groupId>
                     <artifactId>com.dotcms.tika</artifactId>
-                    <version>1.0.0-SNAPSHOT</version>
+                    <version>${project.version}</version>
                     <scope>provided</scope>
                     <exclusions>
                         <exclusion>
