--- a/pom.xml
+++ b/pom.xml
@@ -4,13 +4,12 @@
     <parent>
         <groupId>com.dotcms</groupId>
         <artifactId>dotcms-parent</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>${revision}${sha1}${changelist}</version>
         <relativePath>parent</relativePath>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
     <artifactId>dotcms-root</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <description>DotCMS</description>
     <modules>
@@ -23,7 +22,6 @@
         <module>nodejs-parent</module>
         <module>core-web</module>
         <module>osgi-base</module>
-        <module>plugins-core</module>
         <module>build-parent</module>
         <module>dotCMS</module>
         <module>tools/dotcms-cli</module>
