--- a/tools/dotcms-cli/cli/pom.xml
+++ b/tools/dotcms-cli/cli/pom.xml
@@ -5,14 +5,14 @@
     <parent>
         <artifactId>dotcms-cli-parent</artifactId>
         <groupId>com.dotcms</groupId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>${revision}${sha1}${changelist}</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-
     <artifactId>dotcms-cli</artifactId>
     <packaging>jar</packaging>
 
     <properties>
+        <maven.deploy.skip>false</maven.deploy.skip>
         <executable-suffix/>
         <distribution.directory>${project.build.directory}/distributions</distribution.directory>
         <picocli.codegen.version>4.6.3</picocli.codegen.version>
@@ -42,13 +42,13 @@
         <dependency>
             <groupId>com.dotcms</groupId>
             <artifactId>dotcms-api-data-model</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <version>${project.version}</version>
         </dependency>
 
         <dependency>
             <groupId>com.dotcms</groupId>
             <artifactId>dotcms-api-data-model</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <version>${project.version}</version>
             <type>test-jar</type>
             <scope>test</scope>
         </dependency>
