--- a/core-web/package.json
+++ b/core-web/package.json
@@ -236,7 +236,7 @@
         "jest-fetch-mock": "^3.0.3",
         "jest-html-reporters": "^3.1.5",
         "jest-junit": "^16.0.0",
-        "jest-preset-angular": "13.1.4",
+        "jest-preset-angular": "14.0.3",
         "jsonc-eslint-parser": "^2.1.0",
         "karma": "6.4.0",
         "karma-chrome-launcher": "^3.1.0",
@@ -268,9 +268,13 @@
         "tslint-angular": "^3.0.3",
         "typedoc": "^0.25.4",
         "typescript": "5.3.3",
+        "verdaccio": "^5.0.4",
         "vite": "~5.0.0",
         "vite-plugin-dts": "~2.3.0",
         "webpack": "^5.64.0",
         "webpack-bundle-analyzer": "^4.5.0"
+    },
+    "nx": {
+        "includedScripts": []
     }
 }
