only flatten currently in ci build process

--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -14,6 +14,7 @@
         <changelist>-SNAPSHOT</changelist>
         <sha1/>
         <flatten.mode>oss</flatten.mode>
+        <flatten.skip>true</flatten.skip>
         <maven.deploy.skip>false</maven.deploy.skip>
         <tomcat.version>9.0.85</tomcat.version>
         <!-- Add any properties here that are to have defaults and overrides set in the environment properties -->
@@ -177,6 +178,7 @@
                     <configuration>
                         <updatePomFile>true</updatePomFile>
                         <flattenMode>${flatten.mode}</flattenMode>
+                        <skip>${flatten.skip}</skip>
                     </configuration>
                     <executions>
                         <execution>
