--- a/.github/workflows/maven-release-process.yml
+++ b/.github/workflows/maven-release-process.yml
@@ -135,6 +135,7 @@ jobs:
           ./mvnw -ntp \
             ${JVM_TEST_MAVEN_OPTS} \
             -Dprod=true \
+            -Dflatten.skip=false \
             -Ddocker.buildArchiveOnly=${DOCKER_BUILD_CONTEXT} \
             -DskipTests=true \
             -DskipITs=true \
@@ -286,6 +287,7 @@ jobs:
           ./mvnw -ntp \
             ${JVM_TEST_MAVEN_OPTS} \
             -Dprod=true \
+            -Dflatten.skip=false \
             -DskipTests=true \
             -DskipITs=true \
             deploy
