--- a/core-web/libs/sdk/client/project.json
+++ b/core-web/libs/sdk/client/project.json
@@ -15,7 +15,7 @@
             }
         },
         "build:js": {
-            "executor": "@nrwl/rollup:rollup",
+            "executor": "@nx/esbuild:esbuild",
             "outputs": ["{options.outputPath}"],
             "options": {
                 "outputPath": "../dotCMS/src/main/webapp/html/js/editor-js",
@@ -26,8 +26,9 @@
                 "entryFile": "libs/sdk/client/src/lib/editor/sdk-editor-vtl.ts",
                 "external": ["react/jsx-runtime"],
                 "rollupConfig": "@nrwl/react/plugins/bundle-rollup",
-                "compiler": "swc",
-                "extractCss": false
+                "compiler": "tsc",
+                "extractCss": false,
+                "minify": true
             }
         },
         "publish": {
