POC implement playwright

--- a/core-web/nx.json
+++ b/core-web/nx.json
@@ -162,6 +162,12 @@
                 "serveTargetName": "serve",
                 "serveStaticTargetName": "serve-static"
             }
+        },
+        {
+            "plugin": "@nx/playwright/plugin",
+            "options": {
+                "targetName": "e2e"
+            }
         }
     ]
 }
