--- a/core-web/package.json
+++ b/core-web/package.json
@@ -160,6 +160,7 @@
         "@nx/js": "18.0.4",
         "@nx/linter": "18.0.4",
         "@nx/node": "18.0.4",
+        "@nx/playwright": "18.0.4",
         "@nx/react": "18.0.4",
         "@nx/rollup": "18.0.4",
         "@nx/storybook": "18.0.4",
@@ -167,6 +168,7 @@
         "@nx/web": "18.0.4",
         "@nx/workspace": "18.0.4",
         "@nxext/stencil": "17.2.2",
+        "@playwright/test": "^1.36.0",
         "@rollup/plugin-url": "^7.0.0",
         "@schematics/angular": "17.1.0",
         "@stencil/core": "^2.22.2",
@@ -215,6 +217,7 @@
         "eslint-plugin-cypress": "2.15.1",
         "eslint-plugin-import": "^2.29.1",
         "eslint-plugin-jsx-a11y": "6.7.1",
+        "eslint-plugin-playwright": "^0.15.3",
         "eslint-plugin-react": "7.32.2",
         "eslint-plugin-react-hooks": "4.6.0",
         "eslint-plugin-storybook": "^0.6.15",
