--- a/.github/actions/deploy-artifact-artifactory/action.yml
+++ b/.github/actions/deploy-artifact-artifactory/action.yml
@@ -74,5 +74,5 @@ runs:
     - name: 'Deploy Artifacts'
       run: |
         JVM_TEST_MAVEN_OPTS="-e -B --no-transfer-progress -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn"
-        eval ./mvnw -ntp deploy -Dprod=true -DskipTests=true -DskipITs=true $JVM_TEST_MAVEN_OPTS
+        eval ./mvnw -ntp -Pdeploy deploy -Dprod=true -DskipTests=true -DskipITs=true $JVM_TEST_MAVEN_OPTS
       shell: bash
