--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -80,6 +80,7 @@
         <version.dependency.plugin>3.6.0</version.dependency.plugin>
         <version.deploy.plugin>3.1.1</version.deploy.plugin>
         <version.docker-compose.plugin>4.0.0</version.docker-compose.plugin>
+        <version.artifactory.plugin>3.6.2</version.artifactory.plugin>
         <!-- version.* properties are defined in jboss-parent and are overridden/updated here: -->
         <version.enforcer.plugin>3.0.0</version.enforcer.plugin>
         <version.exec.plugin>3.0.0</version.exec.plugin>
@@ -1658,6 +1659,26 @@
 
                             <!-- plugins will be checked by dependabot -->
                             <versionCheckEnabled>false</versionCheckEnabled>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>deploy</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.jfrog.buildinfo</groupId>
+                        <artifactId>artifactory-maven-plugin</artifactId>
+                        <version>${version.artifactory.plugin}</version>
+                        <configuration>
+                            <deploy>
+                                <repository>
+                                    <repoKey>dotcms-libs</repoKey>
+                                    <snapshotRepoKey>dotcms-libs-snapshot</snapshotRepoKey>
+                                </repository>
+                            </deploy>
                         </configuration>
                     </plugin>
                 </plugins>
