#28226 Artifactory Maven Plugin is set to deploy action. Build Info is added.

--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -1679,6 +1679,9 @@
                                     <snapshotRepoKey>dotcms-libs-snapshot</snapshotRepoKey>
                                 </repository>
                             </deploy>
+                            <buildInfo>
+                                <buildNumber>${buildNumber}</buildNumber>
+                            </buildInfo>
                         </configuration>
                     </plugin>
                 </plugins>
