implementation (languages): initial status of listing

--- a/core-web/tsconfig.base.json
+++ b/core-web/tsconfig.base.json
@@ -46,6 +46,9 @@
             "@dotcms/portlets/dot-languages/portlet": [
                 "libs/portlets/dot-languages/portlet/src/index.ts"
             ],
+            "@dotcms/portlets/dot-languages/portlet/data-access": [
+                "libs/portlets/dot-languages/data-access/src/index.ts"
+            ],
             "@dotcms/react": ["libs/sdk/react/src/index.ts"],
             "@dotcms/react/mocks": ["libs/sdk/react/src/lib/mocks/index.ts"],
             "@dotcms/template-builder": ["libs/template-builder/src/index.ts"],
