implementation (languages listing): libs config files

--- a/core-web/libs/portlets/dot-languages/portlet/project.json
+++ b/core-web/libs/portlets/dot-languages/portlet/project.json
@@ -1,5 +1,5 @@
 {
-    "name": "dot-languages",
+    "name": "portlets-dot-languages-portlet",
     "$schema": "../../../../node_modules/nx/schemas/project-schema.json",
     "sourceRoot": "libs/portlets/dot-languages/portlet/src",
     "prefix": "dot",
