--- a/core-web/libs/portlets/dot-languages/portlet/tsconfig.json
+++ b/core-web/libs/portlets/dot-languages/portlet/tsconfig.json
@@ -3,7 +3,7 @@
         "target": "es2022",
         "useDefineForClassFields": false,
         "forceConsistentCasingInFileNames": true,
-        "strict": true,
+        "strict": false,
         "noImplicitOverride": true,
         "noPropertyAccessFromIndexSignature": true,
         "noImplicitReturns": true,
