--- a/.github/workflows/build-test-pr.yml
+++ b/.github/workflows/build-test-pr.yml
@@ -53,3 +53,14 @@ jobs:
     uses: ./.github/workflows/reusable-finalize.yml
     with:
       needsData: ${{ toJson(needs) }}
+  pr-notifier:
+    name: PR Notifier
+    needs: [ finalize ]
+    if: always()
+    uses: ./.github/workflows/pr-notifier.yml
+    with:
+      pr_status: ${{ needs.finalize.outputs.aggregate_status }}
+    secrets:
+      CI_MACHINE_USER: ${{ secrets.CI_MACHINE_USER }}
+      CI_MACHINE_TOKEN: ${{ secrets.CI_MACHINE_TOKEN }}
+      SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
